# yq.bzl

./: .bazelrc  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  MODULE.bazel  README.md
.aspect/workflows/: config.yaml
.github/workflows/: ci.yaml  publish.yaml  release.yaml  release_prep.sh  tag.yaml
docs/: BUILD.bazel  MODULE.bazel  rules.md
e2e/smoke/: BUILD  MODULE.bazel  WORKSPACE.bazel
e2e/smoke/tests/: yq_host_alias.sh
tools/: BUILD.bazel  preset.bazelrc
yq/: BUILD.bazel  extensions.bzl  yq.bzl
yq/private/: BUILD.bazel  yq.bzl
yq/tests/: BUILD.bazel
yq/toolchain/: BUILD.bazel  mirror_release.sh  platforms.bzl  toolchain.bzl  versions.bzl
