"Bazel dependencies"

module(
    name = "yq.bzl",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_bazel_lib", version = "2.8.1")
bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "package_metadata", version = "0.0.2")
bazel_dep(name = "platforms", version = "0.0.5")

_toolchains = use_extension("//yq:extensions.bzl", "toolchains")
use_repo(_toolchains, "yq_toolchains")

register_toolchains("@yq_toolchains//:all")

bazel_dep(name = "buildifier_prebuilt", version = "8.0.3", dev_dependency = True)

# Use newer aspect_bazel_lib version to get bzl_library validation.
# But don't force users to this version.
single_version_override(
    module_name = "aspect_bazel_lib",
    version = "2.20.0",
)
