bazel_dep(name = "yq.bzl", version = "0.0.0")
bazel_dep(name = "bazel_lib", version = "3.0.0-beta.1")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

local_path_override(
    module_name = "yq.bzl",
    path = "../..",
)

# Bazel 9 compatibility
single_version_override(
    module_name = "aspect_bazel_lib",
    version = "2.19.3",
)
