bazel_dep(name = "yq.bzl", version = "0.0.0")
bazel_dep(name = "bazel_lib", version = "3.2.1")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_shell", version = "0.6.1")

local_path_override(
    module_name = "yq.bzl",
    path = "../..",
)

toolchains = use_extension("@yq.bzl//yq:extensions.bzl", "yq")
use_repo(toolchains, "yq")
